# Curl_Commander

./: .gitignore  README.md  install.sh  pyproject.toml
curlcommander/: config.py  main.py
curlcommander/cli/: arg_parser.py  runner.py  wizard.py
curlcommander/core/: auth_handler.py  curl_builder.py  http_client.py  request_model.py  response_formatter.py
curlcommander/gui/: app.py  curl_panel.py  history_panel.py  request_panel.py  response_panel.py
curlcommander/storage/: db.py  history_repo.py
tests/: test_auth_handler.py  test_curl_builder.py  test_history_repo.py  test_http_client.py  test_request_model.py  test_response_formatter.py
