[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "curlcommander"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "rich>=13.0",
    "prompt_toolkit>=3.0",
    "textual>=0.60",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "respx",
]

[project.scripts]
curlcmd = "curlcommander.main:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
